--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
+    "@napi-rs/canvas": "^0.1.93",
     "express": "^5.2.1",
     "multer": "^2.0.2",
+    "nsfwjs": "^4.2.1",
     "sharp": "^0.34.5"
   }
 }
